@@ -2759,12 +2759,19 @@ usually not required.  Note that this algorithm is implicitly used if
 either @code{derive-parms} is given or Libgcrypt is in FIPS mode.
 
 @item use-fips186
+Force the use of the FIPS 186 key generation algorithm instead of the
+default algorithm.  This flag is only meaningful for DSA and usually
+not required.  Note that this algorithm is implicitly used if either
+@code{derive-parms} is given or Libgcrypt is in FIPS mode.  As of now
+FIPS 186-2 is implemented; after the approval of FIPS 186-3 the code
+will be changed to implement 186-3.
+
+
+@item use-fips186-2
 Force the use of the FIPS 186-2 key generation algorithm instead of
-the default algorithm.  This flag is only meaningful for DSA and
-usually not required.  Note that this algorithm is implicitly used if
-either @code{derive-parms} is given or Libgcrypt is in FIPS mode.
-This implementation may be changed in future to use the forthcoming
-FIPS 186-3 algorithm.
+the default algorithm.  This algorithm has a slighlty different from
+FIPS 186-3 and allws only 1024 bit keys.  This flag is only meaningful
+for DSA and only required for FIPS testing backward compatibility.
 
 
 @end table
